tests/toy/pos/000053_cdrc2.toylang
program a = { a = 0 == 0; } .
