tests/toy/neg/000824_mutation.toylang
program a = { a = var 0; } .
